simple-ingress-https/pod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-test-service
  namespace: test-ingress-https
  labels:
    app: pod-test-ingress-https
spec:
  selector:
    app: pod-test-ingress-https
  ports:
    - name: https
      protocol: TCP
      port: 7654
      targetPort: 7654
    - name: http
      protocol: TCP
      port: 7653
      targetPort: 7653
